[package]
name = "zbus_networkmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
zbus = { version = "2", default-features = false, features = ["tokio"] }
bitflags = "1.3.2"
